auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6840f841",
+   "id": "66c1075a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1853efc",
+   "id": "ecafa5d1",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101e3f1b",
+   "id": "ec8f038f",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8fb3e35b",
+   "id": "efec7de8",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c21c4c7",
+   "id": "d13e1a51",
    "metadata": {},
    "source": [
     "### References\n",
@@ -75,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636d0bce",
+   "id": "f4748aa3",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -86,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27197a56",
+   "id": "c77735ac",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3dee346",
+   "id": "0f06106a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -111,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f85ea1d",
+   "id": "afb1524a",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db26796b",
+   "id": "3e9a7a79",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -131,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79ba137",
+   "id": "004cde48",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd10070d",
+   "id": "035c258a",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -151,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "693bebd6",
+   "id": "228db28d",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b5c268",
+   "id": "bfe544f1",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -208,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ebb511",
+   "id": "cdba8a63",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178266c9",
+   "id": "953f4875",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -244,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44c2823",
+   "id": "7781893c",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501bc328",
+   "id": "6cd04d4a",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -276,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9835c3dc",
+   "id": "c4f34731",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4f7f0f7",
+   "id": "b1f36542",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -336,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b88434",
+   "id": "5aceca08",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -351,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33da5e46",
+   "id": "12383863",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b88917",
+   "id": "2d1fb6dd",
    "metadata": {
     "hide-output": false
    },
@@ -387,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b518145a",
+   "id": "629b3ce5",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -398,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d10e6876",
+   "id": "41ef2362",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646af562",
+   "id": "5d82e4ad",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -418,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565fe84a",
+   "id": "827d2ed4",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e71f099",
+   "id": "774e37fb",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -449,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e01faf3",
+   "id": "eb9ad2a0",
    "metadata": {
     "hide-output": false
    },
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0915cdee",
+   "id": "aa78f964",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -488,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac15d651",
+   "id": "c94d1a8c",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e742c6",
+   "id": "64142dfa",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -516,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e2e141",
+   "id": "82bc768d",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "269c373c",
+   "id": "fc43e97b",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -574,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99ef57a",
+   "id": "69613038",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed1c9172",
+   "id": "20138003",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -610,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3af2dc",
+   "id": "3194acef",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee12554",
+   "id": "32d07b41",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -642,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd10d3d",
+   "id": "f9cf1796",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36beea75",
+   "id": "91db5b21",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -684,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be4c481d",
+   "id": "be26ba8c",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57757107",
+   "id": "68ccb25c",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a517426",
+   "id": "92222d57",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc29fe8",
+   "id": "1584ccdb",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71fce61",
+   "id": "750e8e48",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -742,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99b5871a",
+   "id": "61fe1969",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9160ad74",
+   "id": "df130e62",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -783,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8471ed05",
+   "id": "33a19b4a",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc774ae7",
+   "id": "4bd1ea4a",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -827,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c9c502",
+   "id": "167c8351",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906c5810",
+   "id": "2e97ff99",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aaaf125",
+   "id": "e4f357ad",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -863,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13b19830",
+   "id": "190ee1d3",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0095657a",
+   "id": "caa5d1df",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -883,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe69fb50",
+   "id": "f5e60da8",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55d8bed",
+   "id": "973b3202",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -931,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5e59c0b",
+   "id": "60fab46e",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de91174",
+   "id": "f83fad7e",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -961,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f381c1b",
+   "id": "39a6237b",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4754eb0c",
+   "id": "dc7ec776",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e10767b8",
+   "id": "af1965c7",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1012,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33cebd83",
+   "id": "1548a04a",
    "metadata": {
     "hide-output": false
    },
@@ -1037,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600167dc",
+   "id": "51d98953",
    "metadata": {
     "hide-output": false
    },
@@ -1054,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48000003",
+   "id": "4cc93738",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1066,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e438ea26",
+   "id": "371d5595",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1074,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404cb1e9",
+   "id": "6b2eda05",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1091,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6019d80b",
+   "id": "505366d9",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1100,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9667d6dc",
+   "id": "0dbfdbaa",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82b089f",
+   "id": "b8b0dc3d",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1120,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd75d184",
+   "id": "6499e466",
    "metadata": {
     "hide-output": false
    },
@@ -1134,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f2ca4ba",
+   "id": "1bbb9e7d",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0e4e16",
+   "id": "e588311e",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1159,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eda2553",
+   "id": "437e13c2",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1172,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d99a9e3",
+   "id": "5102249e",
    "metadata": {
     "hide-output": false
    },
@@ -1183,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad50de36",
+   "id": "26d57d59",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1192,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8119d1a",
+   "id": "96f5150e",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41872d3",
+   "id": "3fc8d7d1",
    "metadata": {
     "hide-output": false
    },
@@ -1226,7 +1222,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.145935,
+  "date": 1764540704.4862146,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
