--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0f65cb5",
+   "id": "31cda48b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f656ad",
+   "id": "cee275e3",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f66b600a",
+   "id": "f1043e86",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -38,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4c78a2",
+   "id": "e217eff2",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a9dc2e",
+   "id": "a4f1f2ca",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -100,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dd430a1",
+   "id": "1af5530b",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa01c70b",
+   "id": "0fbaa5f6",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -126,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e75c7273",
+   "id": "64b81976",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "235c03ff",
+   "id": "0d75c67a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -146,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e018e9",
+   "id": "a02a212c",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a7cb4ca",
+   "id": "0716f27d",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -167,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cd15393",
+   "id": "fa26acbd",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -209,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b95f7512",
+   "id": "2f62dc65",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -252,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a65bd5e",
+   "id": "c3d7672a",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -284,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d033cc8",
+   "id": "3ac78d29",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -314,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2b5d9d3",
+   "id": "c4b7c90f",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -325,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c89fe61",
+   "id": "4f25feb9",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -421,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4be07cf",
+   "id": "189f61e6",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -446,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a55d084",
+   "id": "a651e1d7",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -492,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5b4f191",
+   "id": "35af4bb8",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d984e6bc",
+   "id": "6ac3b9be",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72f249f",
+   "id": "0265dcd6",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -562,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08c9aa4",
+   "id": "9067bc49",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e66d2f",
+   "id": "3e2f6a0e",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -585,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec0b67f",
+   "id": "07b67919",
    "metadata": {
     "hide-output": false
    },
@@ -620,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab168112",
+   "id": "5c089135",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -629,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c9c7a9",
+   "id": "3101c168",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d40b9aee",
+   "id": "9d2feb78",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acfc8ba0",
+   "id": "cb4156c9",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980fef1f",
+   "id": "4c9d935a",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07799fe4",
+   "id": "537d2868",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -740,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd3cc498",
+   "id": "c68c04cf",
    "metadata": {
     "hide-output": false
    },
@@ -755,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "680d74a3",
+   "id": "23254506",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -764,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d14bd33",
+   "id": "481b08ef",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46db4d64",
+   "id": "025c9ce1",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -795,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771a0958",
+   "id": "10221ba8",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22157f33",
+   "id": "5d1aad39",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -853,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a7b7b7",
+   "id": "7f8b3dfe",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e330fcb9",
+   "id": "71114006",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94532113",
+   "id": "b62b7aa8",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -886,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dcf5482",
+   "id": "2ebf1467",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31312e09",
+   "id": "d72c68d8",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -908,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62548a78",
+   "id": "a568c1fd",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db8b875",
+   "id": "bb79c577",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1047,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21894d9b",
+   "id": "0bece22c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1055,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "383c9512",
+   "id": "1e096fba",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1068,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f53df11",
+   "id": "983caea0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1079,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc06977",
+   "id": "207d2fef",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c68c8a9",
+   "id": "fddf22bd",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1100,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f493a87b",
+   "id": "313e5e99",
    "metadata": {
     "hide-output": false
    },
@@ -1136,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b1be699",
+   "id": "4da9b8e2",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1145,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df71d16d",
+   "id": "f0c0ac69",
    "metadata": {
     "hide-output": false
    },
@@ -1165,7 +1161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d305c64",
+   "id": "7c11cf45",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1174,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "732c28ed",
+   "id": "67a35c6a",
    "metadata": {
     "hide-output": false
    },
@@ -1201,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36adc8b9",
+   "id": "4d11ad58",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1210,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c5e4a1",
+   "id": "02fc187a",
    "metadata": {
     "hide-output": false
    },
@@ -1229,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10259aae",
+   "id": "274c56f2",
    "metadata": {
     "hide-output": false
    },
@@ -1274,7 +1270,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.2875063,
+  "date": 1764540704.621425,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
