--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea6def1f",
+   "id": "c69c96d5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfced088",
+   "id": "af9870b7",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d125c742",
+   "id": "580da996",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "961cb3cf",
+   "id": "21ea3caf",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -66,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9216f87",
+   "id": "d518364a",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3484dabb",
+   "id": "7403b78d",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -89,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7fb4b73",
+   "id": "32dcc25d",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b47287c5",
+   "id": "a9598c59",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -110,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75911a44",
+   "id": "e60c4c3f",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -133,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93a7855",
+   "id": "d5905b0b",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c76c56b",
+   "id": "08863892",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -179,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10cc9af9",
+   "id": "0ab2c7ba",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -191,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7797be",
+   "id": "6826e7c8",
    "metadata": {
     "hide-output": false
    },
@@ -206,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799c36c2",
+   "id": "2b5068e5",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -230,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "921b9515",
+   "id": "e2ee792c",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c9c9e2a",
+   "id": "0f2676a2",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdddc59a",
+   "id": "95b321b1",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -267,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7efb8d32",
+   "id": "e1c5b11e",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f747a5df",
+   "id": "aede0cc7",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -288,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88674d01",
+   "id": "24dd560c",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f827db55",
+   "id": "3e6fef80",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -308,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad61d9f",
+   "id": "145ec49c",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b087890e",
+   "id": "21c1b074",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c3df0d",
+   "id": "2807c661",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -346,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7103eeb8",
+   "id": "3c4487d5",
    "metadata": {
     "hide-output": false
    },
@@ -359,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cc4bc1c",
+   "id": "d57a7f10",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a3ef4fe",
+   "id": "35cae94c",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ba6911",
+   "id": "81901152",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -395,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b4aa75d",
+   "id": "ffa9c7d7",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4837acd8",
+   "id": "17be0f19",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -417,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99ade59",
+   "id": "3647ba05",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b945db",
+   "id": "fca09d7f",
    "metadata": {
     "hide-output": false
    },
@@ -450,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "219f9651",
+   "id": "c55c0b87",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3060bac0",
+   "id": "0cc187c8",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a9619a7",
+   "id": "410064af",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -488,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b8306b",
+   "id": "d698170a",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd3b517",
+   "id": "b46ee565",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f201734",
+   "id": "e4c73411",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8690390",
+   "id": "261aa2f6",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81cf837e",
+   "id": "359ae79f",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -555,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d59ee2d",
+   "id": "4524749d",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -566,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "428dc8a6",
+   "id": "d650a322",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b50e332c",
+   "id": "8e8a8bf7",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -618,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f9aeafb",
+   "id": "a4ccbbf3",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c84b1820",
+   "id": "8400825e",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6dc600",
+   "id": "e7d86ad4",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -660,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3b42c8",
+   "id": "b6e153e8",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c27e85f",
+   "id": "5f51d3b7",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675528eb",
+   "id": "ac321fe7",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9dcab7",
+   "id": "45829e42",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -716,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11440c7a",
+   "id": "2c7a8868",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af48131",
+   "id": "0a65beed",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -740,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3a7f39",
+   "id": "23a9ab28",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c3facba",
+   "id": "abc2cd28",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -762,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95051478",
+   "id": "6d4a93b5",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcc3348",
+   "id": "7a39a1d2",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -787,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f68b291",
+   "id": "8a81e946",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -800,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff95a2d8",
+   "id": "1a52f9c9",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0c7d6d",
+   "id": "5018d17c",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -826,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c0f2cca",
+   "id": "8798d6f1",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125ec944",
+   "id": "4a72f17f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -853,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766fbcb1",
+   "id": "f150ebca",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -883,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89afcdf6",
+   "id": "38e8e84d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -894,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eac1221",
+   "id": "09e81024",
    "metadata": {
     "hide-output": false
    },
@@ -908,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a77b7a4",
+   "id": "83d34116",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +925,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.3159015,
+  "date": 1764540704.6489248,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
