--- a/ifp_dl.ipynb
+++ b/ifp_dl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ffc5d1d6",
+   "id": "4bbd2080",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a1ba1ef",
+   "id": "33140536",
    "metadata": {},
    "source": [
     "# Policy Gradient-Based Optimal Savings"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e102c56",
+   "id": "a47682fd",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13be58c2",
+   "id": "f6a67805",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -70,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3fa95f",
+   "id": "60e0f8e7",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63dbf913",
+   "id": "d09b0c27",
    "metadata": {},
    "source": [
     "We’ll use the following imports"
@@ -90,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c034974a",
+   "id": "d557d504",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db3b8169",
+   "id": "bff2e8e1",
    "metadata": {},
    "source": [
     "## Theory\n",
@@ -118,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c7cc874",
+   "id": "628dfa62",
    "metadata": {},
    "source": [
     "### Household problem\n",
@@ -159,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63357621",
+   "id": "e2a6b342",
    "metadata": {},
    "source": [
     "### Lifetime Value and Optimization\n",
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8660370",
+   "id": "01dc55e6",
    "metadata": {},
    "source": [
     "### The policy gradient approach\n",
@@ -274,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "328a83ae",
+   "id": "5cd654c4",
    "metadata": {},
    "source": [
     "## Network\n",
@@ -295,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1286aa30",
+   "id": "70391d11",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b8612d",
+   "id": "7daadd1a",
    "metadata": {},
    "source": [
     "We use a class called `LayerParams` to store parameters representing a single\n",
@@ -326,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d33eb36",
+   "id": "fe63af1d",
    "metadata": {
     "hide-output": false
    },
@@ -343,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6889d4c8",
+   "id": "f932c5a5",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using Le Cun\n",
@@ -353,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c995ab9",
+   "id": "f4871f56",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434f415a",
+   "id": "118a98fc",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -383,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a243eb",
+   "id": "b1e3cbd2",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37200787",
+   "id": "01cb1412",
    "metadata": {},
    "source": [
     "Here’s a function to train the network by gradient ascent, given a generic loss\n",
@@ -424,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f775a654",
+   "id": "1785df86",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c677a81e",
+   "id": "0f812874",
    "metadata": {},
    "source": [
     "## Cake Eating Case\n",
@@ -506,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "059fbe0d",
+   "id": "d8761d5c",
    "metadata": {},
    "source": [
     "### Cake eating loss function\n",
@@ -517,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb2724a",
+   "id": "0ec8196c",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0907b820",
+   "id": "e465ba7f",
    "metadata": {},
    "source": [
     "We use CRRA utility."
@@ -544,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9749aeb3",
+   "id": "479ed30c",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f41ea0c",
+   "id": "e27e2b55",
    "metadata": {},
    "source": [
     "Now we provide a function that implements a consumption policy as a neural network, given the\n",
@@ -568,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a69d76ff",
+   "id": "be55b05c",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a67106c",
+   "id": "119ac110",
    "metadata": {},
    "source": [
     "The next function approximates lifetime value for the cake eating agent\n",
@@ -607,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a720ca1",
+   "id": "74421158",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef679fc6",
+   "id": "c809da15",
    "metadata": {},
    "source": [
     "Here’s the loss function we will minimize."
@@ -654,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158a7cc1",
+   "id": "a8c0b2a3",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a471baa4",
+   "id": "69181ee7",
    "metadata": {},
    "source": [
     "### Train and solve\n",
@@ -682,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c27a7d7",
+   "id": "b5a4ac03",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4536fe90",
+   "id": "ded075d6",
    "metadata": {},
    "source": [
     "We test stability."
@@ -703,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9f49e3",
+   "id": "1f6d49c8",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a93f23a2",
+   "id": "9addffee",
    "metadata": {},
    "source": [
     "We compute the optimal consumption rate and lifetime value from the analytical\n",
@@ -724,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86621c39",
+   "id": "5f7f7502",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05cd60c",
+   "id": "e48b7e48",
    "metadata": {},
    "source": [
     "Now let’s train the network."
@@ -747,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6bc648",
+   "id": "a878840a",
    "metadata": {
     "hide-output": false
    },
@@ -771,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9c4ea6",
+   "id": "7148fabe",
    "metadata": {},
    "source": [
     "First we plot the evolution of lifetime value over the epochs."
@@ -780,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc6df31",
+   "id": "015ac0d8",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c401304",
+   "id": "7477e83d",
    "metadata": {},
    "source": [
     "Next we compare the learned and optimal policies."
@@ -806,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4367b3a",
+   "id": "e19237cf",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744378a5",
+   "id": "bddb0f59",
    "metadata": {},
    "source": [
     "### Simulation\n",
@@ -845,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a14186",
+   "id": "26355990",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1ce162",
+   "id": "83b4be82",
    "metadata": {},
    "source": [
     "Let’s simulate and plot path"
@@ -894,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "024dd9fe",
+   "id": "867c650d",
    "metadata": {
     "hide-output": false
    },
@@ -924,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa6e3f2b",
+   "id": "cf64ae09",
    "metadata": {},
    "source": [
     "## IFP Model\n",
@@ -936,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74dc77aa",
+   "id": "39d34f00",
    "metadata": {},
    "source": [
     "### JAX Implementation\n",
@@ -947,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2545a4c4",
+   "id": "5326f2cb",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48442255",
+   "id": "12bf9686",
    "metadata": {},
    "source": [
     "### Solving the IID model using the EGM\n",
@@ -1003,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055d9b20",
+   "id": "362b612c",
    "metadata": {
     "hide-output": false
    },
@@ -1059,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b41d48",
+   "id": "5ea588e8",
    "metadata": {},
    "source": [
     "Here’s the solver using time iteration:"
@@ -1068,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d0385d4",
+   "id": "095d89f0",
    "metadata": {
     "hide-output": false
    },
@@ -1113,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f8e8ff",
+   "id": "dce14820",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the optimal policy:"
@@ -1122,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a17c8b",
+   "id": "a7c2e34b",
    "metadata": {
     "hide-output": false
    },
@@ -1141,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18c6f33b",
+   "id": "637fdc41",
    "metadata": {},
    "source": [
     "Plot the optimal consumption policy:"
@@ -1150,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366e12a6",
+   "id": "1bfecd3f",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "716ee20f",
+   "id": "717fc0f6",
    "metadata": {},
    "source": [
     "### Solving the IID model with DL\n",
@@ -1186,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bb25a28",
+   "id": "573f7fab",
    "metadata": {
     "hide-output": false
    },
@@ -1244,7 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dd25e63",
+   "id": "97c2eae5",
    "metadata": {},
    "source": [
     "The loss function is the negation of the expected lifetime value."
@@ -1253,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475b2e18",
+   "id": "6dce961f",
    "metadata": {
     "hide-output": false
    },
@@ -1267,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ceca940",
+   "id": "f1733e40",
    "metadata": {},
    "source": [
     "Now let’s set up and train the network.\n",
@@ -1278,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4616e79",
+   "id": "49ee8e56",
    "metadata": {
     "hide-output": false
    },
@@ -1307,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5a5411",
+   "id": "0289561b",
    "metadata": {},
    "source": [
     "Plot the learning progress."
@@ -1316,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f9a434",
+   "id": "1938c4b1",
    "metadata": {
     "hide-output": false
    },
@@ -1332,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a435d267",
+   "id": "6156531b",
    "metadata": {},
    "source": [
     "Compare EGM and DL solutions."
@@ -1341,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee5ce501",
+   "id": "9f14fbcf",
    "metadata": {
     "hide-output": false
    },
@@ -1365,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d6be748",
+   "id": "9dc7a0a0",
    "metadata": {},
    "source": [
     "The fit is quite good."
@@ -1373,7 +1369,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.391701,
+  "date": 1764540704.721952,
   "filename": "ifp_dl.md",
   "kernelspec": {
    "display_name": "Python",
