--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ddcd4505",
+   "id": "301bd5e6",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81419f5",
+   "id": "a8009536",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28c56a8c",
+   "id": "6cb4916a",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9d402b81",
+   "id": "a54be959",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f575fa7",
+   "id": "3decb870",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a74a4a2",
+   "id": "f69327eb",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2f23b8",
+   "id": "25bc624e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -92,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b8cb860",
+   "id": "0a51a538",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e44039",
+   "id": "0fe7d974",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -112,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdf22d5",
+   "id": "210ff369",
    "metadata": {
     "hide-output": false
    },
@@ -123,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e33bd8b",
+   "id": "85e18a37",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -169,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76044f44",
+   "id": "f220c97a",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b76837",
+   "id": "247ed3e5",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -223,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bbfe5b3",
+   "id": "4f18b089",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -392,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55332960",
+   "id": "29e43b94",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -408,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc35f50e",
+   "id": "2d5a01c2",
    "metadata": {
     "hide-output": false
    },
@@ -464,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100ff037",
+   "id": "266906af",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -475,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe2640f",
+   "id": "fdf6ccee",
    "metadata": {
     "hide-output": false
    },
@@ -486,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873eef43",
+   "id": "9d6a87e0",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -495,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd7bfeb",
+   "id": "3311c8d9",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458bb3ea",
+   "id": "8ee8ae61",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -557,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab0f634",
+   "id": "fdcc5211",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "495a4d9b",
+   "id": "aa421608",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe283ca7",
+   "id": "ca11e050",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -664,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e39827",
+   "id": "738fcb74",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -673,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d57ac4",
+   "id": "de6bfa07",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec201a8",
+   "id": "a2990940",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -693,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3266f4ce",
+   "id": "afe66821",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b963bd51",
+   "id": "98f5b620",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -715,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46c2cc9f",
+   "id": "e0427010",
    "metadata": {
     "hide-output": false
    },
@@ -728,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e297d24",
+   "id": "39ef1eb6",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -737,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "182429c2",
+   "id": "9a089ebd",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa98757",
+   "id": "8167a05d",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -778,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1665c9eb",
+   "id": "6e6e4760",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0492aba9",
+   "id": "1abffd03",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f1fd55b",
+   "id": "26bdee76",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d080ef",
+   "id": "af32b34c",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -832,7 +828,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.4191139,
+  "date": 1764540704.7482758,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
