--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "592d3260",
+   "id": "4e036600",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a25db96",
+   "id": "69b1bcae",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99b46eb",
+   "id": "d8b26b32",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "\n",
     "<a id='index-0'></a>"
@@ -38,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e410adf",
+   "id": "8fa71708",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -70,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def6043f",
+   "id": "3c01bdd2",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3688f42c",
+   "id": "b61afa0b",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -96,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba7e3c6",
+   "id": "3a9f3287",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ff64a3",
+   "id": "293a7e4d",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -145,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18beb04b",
+   "id": "062fd0db",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e696f030",
+   "id": "bca831fd",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -189,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b669598e",
+   "id": "b6471054",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bda73b",
+   "id": "f8b054ec",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -236,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00901235",
+   "id": "7dfd310f",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cd4cb21",
+   "id": "1a890c01",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -271,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e613362c",
+   "id": "545ebe7d",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c02806ad",
+   "id": "67d007a3",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -295,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e29d098c",
+   "id": "31e40845",
    "metadata": {
     "hide-output": false
    },
@@ -310,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9481032",
+   "id": "a46457c3",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -319,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05ef9bd",
+   "id": "c880e8d2",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b9af46",
+   "id": "575e4d15",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -343,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f42f0c",
+   "id": "4b99dd66",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11bc0e6",
+   "id": "b7955fc1",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -376,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61290f74",
+   "id": "dea25e84",
    "metadata": {
     "hide-output": false
    },
@@ -420,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3649473",
+   "id": "593d8bd6",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -429,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "978f4a40",
+   "id": "8b5b4ac5",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af5fe49",
+   "id": "6d8fc4f1",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -453,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eca48c2",
+   "id": "5b654176",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfbf16c8",
+   "id": "69a6b821",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f376271",
+   "id": "7e96d09b",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -495,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8267148d",
+   "id": "53b6618a",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03cd7f67",
+   "id": "085cba68",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -532,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7d0567",
+   "id": "2e9eb024",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e7e991",
+   "id": "4ad24ca8",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -558,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137e43b0",
+   "id": "535d87a0",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a40eae6c",
+   "id": "36cbf636",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -599,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1616ea",
+   "id": "401b4e60",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -618,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f1119b",
+   "id": "2db5fbcf",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -629,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c8417a",
+   "id": "e37b614c",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d7c8b25",
+   "id": "c77080ca",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12831f06",
+   "id": "3e76ccad",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -696,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ee78d7",
+   "id": "88ec889c",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c497ca5",
+   "id": "2bd3d165",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b18b905",
+   "id": "ea1f42c6",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -733,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ca7104",
+   "id": "4df6051c",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -744,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3c5ac1b",
+   "id": "f6402358",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e46c18",
+   "id": "11ea4bdf",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -797,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ed1e99",
+   "id": "70005be2",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3547205e",
+   "id": "472e211f",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -820,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0153a079",
+   "id": "f6bb0284",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "164d036c",
+   "id": "1e5699c7",
    "metadata": {
     "hide-output": false
    },
@@ -846,7 +842,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.4598017,
+  "date": 1764540704.7868984,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
