--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56124a48",
+   "id": "6a37ced9",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb8ea2d",
+   "id": "d8960c2d",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08067b6a",
+   "id": "4f9fe7f3",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "This lecture provides a JAX implementation of a model in [Dynamic Programming](https://dp.quantecon.org/).\n",
     "\n",
@@ -40,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d1f511",
+   "id": "0e28583c",
    "metadata": {
     "hide-output": false
    },
@@ -51,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d6dca8b",
+   "id": "519e7d16",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e672068",
+   "id": "b48c7caa",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -204,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf07b340",
+   "id": "5ba93e2f",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437725cf",
+   "id": "c966e876",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -231,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e592a5",
+   "id": "234e793e",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f9fd9c9",
+   "id": "756d72d1",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -251,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f779ce64",
+   "id": "e7488893",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7e2b737",
+   "id": "fa5e1480",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -271,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d955da54",
+   "id": "9b100d15",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "469fa509",
+   "id": "54adac75",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17a18899",
+   "id": "099d4a22",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -340,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950670b7",
+   "id": "deb18231",
    "metadata": {
     "hide-output": false
    },
@@ -378,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f371c0",
+   "id": "8f55dc32",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -390,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1bd5e6",
+   "id": "a126ce5f",
    "metadata": {
     "hide-output": false
    },
@@ -402,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c908939c",
+   "id": "556d4cb6",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -411,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf2abdaa",
+   "id": "9a8f61d2",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8befba79",
+   "id": "6e673c1f",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -437,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66bd502f",
+   "id": "f6d1fe3e",
    "metadata": {
     "hide-output": false
    },
@@ -454,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844787a3",
+   "id": "14f81a64",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -463,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77932352",
+   "id": "d5922616",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb8f6ca",
+   "id": "6403ed91",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -503,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e73c588",
+   "id": "7f4d4d27",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4bef49",
+   "id": "17e83641",
    "metadata": {
     "hide-output": false
    },
@@ -537,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70bfbfe9",
+   "id": "a3a5e265",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -546,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "758b14ac",
+   "id": "b1637331",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b2d449",
+   "id": "28d04f87",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -575,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f3152e",
+   "id": "3cb56fdc",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14723f12",
+   "id": "1bfea67f",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -597,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45253b2",
+   "id": "1a66a72e",
    "metadata": {
     "hide-output": false
    },
@@ -620,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad17b4aa",
+   "id": "ea33a202",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -629,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1cc95d3",
+   "id": "c3c1874f",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "361dd795",
+   "id": "11ee176e",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -670,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b78209a",
+   "id": "80f92d7b",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +677,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.4791787,
+  "date": 1764540704.805591,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
