--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8f43805",
+   "id": "18a3bb97",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f21ffc",
+   "id": "41b8608c",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac396e09",
+   "id": "802f58d5",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In this lecture we show how to implement one-dimensional nonlinear regression\n",
     "using a neural network.\n",
@@ -56,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc0abef9",
+   "id": "5ea679d0",
    "metadata": {
     "hide-output": false
    },
@@ -68,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ae7125",
+   "id": "39d3fea3",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -77,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c0eeae",
+   "id": "51058c9b",
    "metadata": {
     "hide-output": false
    },
@@ -88,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca091b4b",
+   "id": "6fec12de",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -97,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc8fdc9",
+   "id": "8229ed34",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427ac424",
+   "id": "24d26501",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -120,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a20dfa",
+   "id": "eb84bb8b",
    "metadata": {
     "hide-output": false
    },
@@ -133,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a63c5f4c",
+   "id": "7916e354",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -161,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3799863a",
+   "id": "340eafa4",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cdcf7e",
+   "id": "28d35110",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -192,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9611c1e",
+   "id": "8337756d",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec7259f",
+   "id": "6a3e0819",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -212,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78865ad6",
+   "id": "c7e29551",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b9c23f",
+   "id": "711529e8",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -236,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ed63f0",
+   "id": "e2210c72",
    "metadata": {
     "hide-output": false
    },
@@ -247,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9e29cb",
+   "id": "4ff52cd6",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -257,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca95153",
+   "id": "e4766a69",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -274,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6edac5",
+   "id": "c2deb50d",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525f2625",
+   "id": "b61e6c5d",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -309,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f90ead",
+   "id": "311d26c4",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -321,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ddefa9c",
+   "id": "f4a4a9a3",
    "metadata": {
     "hide-output": false
    },
@@ -343,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0696cfb7",
+   "id": "8266131f",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -358,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a2eac18",
+   "id": "4f14e250",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "befd7ab1",
+   "id": "d06c0774",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -392,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f94c481",
+   "id": "8e7f8022",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -403,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a8420f",
+   "id": "8ecf888e",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e9b21a",
+   "id": "a2e8fe4a",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -423,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8c0f64",
+   "id": "9052095d",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df56f8f",
+   "id": "942d226e",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -445,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d316c6e8",
+   "id": "ab70ba75",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3eb6e20",
+   "id": "94f54398",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -467,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84da29fa",
+   "id": "dee4a288",
    "metadata": {
     "hide-output": false
    },
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073db570",
+   "id": "7ed7a8de",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -488,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97257e7d",
+   "id": "8f9e61a8",
    "metadata": {
     "hide-output": false
    },
@@ -499,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7772dbc7",
+   "id": "d753db04",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -508,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8f2c71a",
+   "id": "3bd6e897",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1623143b",
+   "id": "967aee50",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -532,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e83f4b44",
+   "id": "5e193323",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5611828c",
+   "id": "ed1ecac6",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -558,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f418c918",
+   "id": "63029ec1",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7680f4b",
+   "id": "682add35",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49db136e",
+   "id": "ecf2f362",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ad05cc",
+   "id": "cd31685c",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -606,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61cc8d3d",
+   "id": "fdd5ba63",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcca9900",
+   "id": "de2ed305",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -630,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a32af8",
+   "id": "4fa79ff2",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a202684d",
+   "id": "07a377fd",
    "metadata": {
     "hide-output": false
    },
@@ -658,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e654ba7",
+   "id": "1d7cd753",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd880ef",
+   "id": "cb79cdeb",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -681,7 +677,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.6280706,
+  "date": 1764540704.9483304,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
