--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b751ef60",
+   "id": "feca85ac",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "239cd118",
+   "id": "15974452",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,16 +24,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2a7db0",
+   "id": "4ecf0c21",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -41,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b6eb6b",
+   "id": "b7aa1435",
    "metadata": {
     "hide-output": false
    },
@@ -52,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8e01eb",
+   "id": "2a132cb2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -73,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec3046d",
+   "id": "25185d46",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fe1e49f",
+   "id": "f6384ca6",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -101,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f481f620",
+   "id": "d6d8e7c7",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e8b87c",
+   "id": "819acc71",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -143,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5970e121",
+   "id": "bfd9378e",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -153,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e92fbe",
+   "id": "42d9c708",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -194,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a330df88",
+   "id": "5ea12cea",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -247,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73a71d3",
+   "id": "f0f024a0",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd183265",
+   "id": "dd7a4b2d",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -275,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2b3989",
+   "id": "6d296c24",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841f5a2a",
+   "id": "04917176",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -303,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8b31482",
+   "id": "4cb655dc",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04fdd22",
+   "id": "73d3d0f9",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -344,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d9be58",
+   "id": "54d9917d",
    "metadata": {
     "hide-output": false
    },
@@ -358,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcbee9f6",
+   "id": "86462bb3",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -367,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "084b3fc1",
+   "id": "88f59ddc",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee320cd",
+   "id": "1e35ed2a",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -389,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeeb2c14",
+   "id": "d786e42b",
    "metadata": {
     "hide-output": false
    },
@@ -407,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46970bda",
+   "id": "0dd8f2d7",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -415,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b331bdc9",
+   "id": "c37c3312",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -436,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba80eda",
+   "id": "5479e7a0",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154b426a",
+   "id": "9cdba1df",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -486,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f337738b",
+   "id": "2e888400",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f6353f2",
+   "id": "a1bec5f0",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f230f552",
+   "id": "6529beb5",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -522,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3b8b7f",
+   "id": "dee60981",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef155eaf",
+   "id": "3129ccea",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -548,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d58d23d",
+   "id": "830b068d",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -564,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c74e00",
+   "id": "e09df536",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -573,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3fc2ce",
+   "id": "1a8e3073",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4f0789",
+   "id": "2fd7170a",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -619,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a098453f",
+   "id": "60b3eeac",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9b0c9a",
+   "id": "51a5584d",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b68c620e",
+   "id": "d55c5a11",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -661,7 +657,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.65074,
+  "date": 1764540704.9698966,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
