--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71fa59fd",
+   "id": "aae1342b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de6ffb2",
+   "id": "f210e6e2",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f1aaf2",
+   "id": "fddac7a8",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,16 +30,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9755fcdb",
+   "id": "6634e1e4",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "\n",
     "<a id='index-0'></a>"
@@ -47,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e259bc42",
+   "id": "e2288c61",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -78,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e08e77c3",
+   "id": "bd8da8fa",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "877b509c",
+   "id": "93d0c48d",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -118,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2ba0f6f",
+   "id": "a7db36d9",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -128,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ed1589",
+   "id": "7afd80a5",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -158,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d55c90cb",
+   "id": "a92ec679",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2efa9086",
+   "id": "66d15fe5",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -221,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ca2023",
+   "id": "793ceff8",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -279,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5bd6d1",
+   "id": "5853a3b5",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -298,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb5fa36",
+   "id": "5c5a647f",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -317,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9312cf6f",
+   "id": "4c97235a",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -363,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4c506d",
+   "id": "eea2a94e",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -379,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e115b346",
+   "id": "220b5807",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -429,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20968a5",
+   "id": "6632fd3a",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -491,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec4173b",
+   "id": "67772242",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -519,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ca3e6d",
+   "id": "a814fc99",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -534,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d7ee55c",
+   "id": "6f22be94",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881cb8d4",
+   "id": "be5293c2",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -577,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e720694b",
+   "id": "053ee17c",
    "metadata": {
     "hide-output": false
    },
@@ -604,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbf1c3f",
+   "id": "bfa7b69a",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -614,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef09ce49",
+   "id": "7cc694a3",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c600b3",
+   "id": "a0ce7588",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -652,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee6f0092",
+   "id": "501a2ed4",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0fad7e",
+   "id": "bd541b88",
    "metadata": {
     "hide-output": false
    },
@@ -688,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953fdc2b",
+   "id": "94e7d370",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae9f81a",
+   "id": "c14ccc02",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -717,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b8fe424",
+   "id": "034072a0",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -728,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f7746f",
+   "id": "818afd49",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a23a36",
+   "id": "47eb756b",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -775,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a7634b",
+   "id": "fabe5bbe",
    "metadata": {
     "hide-output": false
    },
@@ -792,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82f8128",
+   "id": "1d20d680",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -801,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e0816f",
+   "id": "abdf30ea",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0a48fc",
+   "id": "bb3c963b",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -830,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97830c8",
+   "id": "fb63c7e8",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bead173f",
+   "id": "5c5696f0",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -869,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36158622",
+   "id": "64e9997d",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36cf2b59",
+   "id": "e25f0d45",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -904,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ef48dd",
+   "id": "90d0a5b2",
    "metadata": {
     "hide-output": false
    },
@@ -924,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2d3b3d",
+   "id": "ed9114c3",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559148ee",
+   "id": "46778077",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -949,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a89833",
+   "id": "da7fb563",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b083381",
+   "id": "4f491bf1",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -976,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d7d53c",
+   "id": "05d172c1",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -988,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fef74500",
+   "id": "7e7571e2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -997,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e883866",
+   "id": "b785f154",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1016,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.6985898,
+  "date": 1764540705.015921,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
