--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5e63bae",
+   "id": "045b0dae",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c47b3a74",
+   "id": "814ac075",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0199a718",
+   "id": "214b5a15",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d85578f3",
+   "id": "38b9849f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10d45f7e",
+   "id": "78dba745",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0087030b",
+   "id": "c7ca2c5f",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -82,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e0e3059",
+   "id": "7861b6e6",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d3edc24",
+   "id": "29a78752",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -102,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5389b9d1",
+   "id": "d9987e9d",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b7f5e9",
+   "id": "4c9594c9",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -129,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b890863",
+   "id": "b4c102c9",
    "metadata": {
     "hide-output": false
    },
@@ -140,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc34e646",
+   "id": "941e231d",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9cead05",
+   "id": "fe7962f1",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -250,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f32f9a",
+   "id": "d3236754",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391f28f2",
+   "id": "a86cda8a",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -461,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "880925ba",
+   "id": "115c2432",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -474,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da9c9fe0",
+   "id": "83b23fc2",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32d03b8",
+   "id": "44f3bc42",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -517,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5192f648",
+   "id": "5774de92",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd47149",
+   "id": "cf7986f7",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -552,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fa7d402",
+   "id": "a0e6b8bc",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "074e6f73",
+   "id": "4a3bb889",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -593,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32620349",
+   "id": "3f26ef89",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "000a9fc4",
+   "id": "df80bd53",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -623,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be9358b",
+   "id": "fe06bb5b",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b902cdd7",
+   "id": "a155b807",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -652,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf6c85ec",
+   "id": "247c6d8a",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57bfaf0",
+   "id": "0ee0055d",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -675,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98842cba",
+   "id": "8f8acb0e",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c1897d",
+   "id": "ed00f95e",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -721,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062cd2e1",
+   "id": "eafdf664",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5743cd3",
+   "id": "732bac65",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -759,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b37c66e6",
+   "id": "8d4bf349",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -905,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cfa8f78",
+   "id": "770ccf95",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -926,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1b6344",
+   "id": "0c8129f3",
    "metadata": {
     "hide-output": false
    },
@@ -971,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ac4abe8",
+   "id": "d3834846",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -980,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64cbaa7e",
+   "id": "3047ccc2",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf49698",
+   "id": "7fc42bc7",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1018,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61473a73",
+   "id": "224972ec",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd76c13",
+   "id": "8a84c33c",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1070,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6565b912",
+   "id": "a18ca956",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8acf8bd",
+   "id": "fa83577b",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1091,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18e5694",
+   "id": "01397e0e",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b4f40b9",
+   "id": "24bf6ae8",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1114,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "727b01e6",
+   "id": "4078ed16",
    "metadata": {
     "hide-output": false
    },
@@ -1128,7 +1124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e617fe40",
+   "id": "1020cf28",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1137,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab616ae",
+   "id": "1d6d826b",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db7e4fc3",
+   "id": "8c4927b3",
    "metadata": {
     "hide-output": false
    },
@@ -1171,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c199cff7",
+   "id": "f2a16fa1",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5502c346",
+   "id": "8abf0234",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1200,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c18864",
+   "id": "92626a69",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b112c967",
+   "id": "1ccf3c5f",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1237,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bfff897",
+   "id": "8c13790c",
    "metadata": {
     "hide-output": false
    },
@@ -1266,7 +1262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0559a3",
+   "id": "b5aea625",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1275,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dd2d15b",
+   "id": "323d0ce1",
    "metadata": {
     "hide-output": false
    },
@@ -1314,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc86a3ee",
+   "id": "d8097801",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1323,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd9a9d17",
+   "id": "a303c570",
    "metadata": {
     "hide-output": false
    },
@@ -1336,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e4dce2",
+   "id": "0b2823c1",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "305f6f4c",
+   "id": "5678d42d",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1359,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea09bb55",
+   "id": "64f9f4a4",
    "metadata": {
     "hide-output": false
    },
@@ -1373,7 +1369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c78814",
+   "id": "caa362b4",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1382,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480bfa5a",
+   "id": "54cfd209",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c78379",
+   "id": "569ff208",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1405,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0a35d8",
+   "id": "4be8e8eb",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd7f090",
+   "id": "b2793826",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1425,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d10086",
+   "id": "96f7fae6",
    "metadata": {
     "hide-output": false
    },
@@ -1438,7 +1434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8be27dd",
+   "id": "fcb1f0ec",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1455,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d7d3eba",
+   "id": "8a098458",
    "metadata": {
     "hide-output": false
    },
@@ -1483,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3865c266",
+   "id": "dcbdddf3",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1493,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd0ccef",
+   "id": "a2877666",
    "metadata": {
     "hide-output": false
    },
@@ -1515,7 +1511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234acaa1",
+   "id": "0fbfa0eb",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1524,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9818e969",
+   "id": "f34a8b13",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "406d7337",
+   "id": "66a243db",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1545,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7b9967f",
+   "id": "8f829f5a",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4e9894",
+   "id": "959ffee4",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1568,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d240d30",
+   "id": "8718b6c5",
    "metadata": {
     "hide-output": false
    },
@@ -1582,7 +1578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808c6a7d",
+   "id": "12dd19f5",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1591,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9af523a6",
+   "id": "a6332046",
    "metadata": {
     "hide-output": false
    },
@@ -1602,7 +1598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78955f16",
+   "id": "efd32fe4",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1611,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea6c483a",
+   "id": "54ffecf7",
    "metadata": {
     "hide-output": false
    },
@@ -1622,7 +1618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f1e867",
+   "id": "7652f2a1",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1633,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf187173",
+   "id": "47989309",
    "metadata": {
     "hide-output": false
    },
@@ -1650,7 +1646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd8ca63",
+   "id": "58db31b1",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1661,7 +1657,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.7492776,
+  "date": 1764540705.0646203,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
