--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57ac9713",
+   "id": "0ee0d56e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b687dd5",
+   "id": "8db29d7e",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d806a9c9",
+   "id": "5503a1f9",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63f4ebfb",
+   "id": "fa14f171",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -52,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce7286d",
+   "id": "3835fd25",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871ea939",
+   "id": "3fc26f7e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -76,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea006202",
+   "id": "705db928",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b990acc",
+   "id": "65a6200f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -96,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35a33c64",
+   "id": "e90444af",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a2f9588",
+   "id": "7e4d5308",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -122,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc63c69",
+   "id": "812ccb95",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -144,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62d817e1",
+   "id": "9fd0082d",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b415e3",
+   "id": "1ebbb094",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -168,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f928690",
+   "id": "50e5db04",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8fb1f0b",
+   "id": "7d3ff901",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa955fb1",
+   "id": "cd2bfba1",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -237,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60deeff8",
+   "id": "04ccaef9",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -263,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5fb8c82",
+   "id": "e9c18ed5",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dba75c5",
+   "id": "cdf12ee1",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -313,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d047797f",
+   "id": "f8918ae2",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a461f0d",
+   "id": "7e984515",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -337,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd3421d",
+   "id": "424da86b",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e83f3dbf",
+   "id": "47c0d5b7",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -371,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fce9b79",
+   "id": "60221425",
    "metadata": {
     "hide-output": false
    },
@@ -383,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136af354",
+   "id": "0c9d26eb",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -397,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4f64c6",
+   "id": "627afc12",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d90c504",
+   "id": "9bbd502f",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -447,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a76b8f",
+   "id": "06e9aefc",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0e1202",
+   "id": "2ad275cc",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -485,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39dc8baa",
+   "id": "f92ce40f",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78fa609d",
+   "id": "7ddbe692",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -514,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a98d79b4",
+   "id": "8b22882b",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef621336",
+   "id": "84210d89",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd1538d2",
+   "id": "f899fa24",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b63075d",
+   "id": "9cb01552",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -595,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d5d4dbc",
+   "id": "e93bbb0e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -606,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23455111",
+   "id": "762f6cf8",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918485cb",
+   "id": "77981808",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -628,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6aa3a3f",
+   "id": "7b4e2d04",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c38b743",
+   "id": "60d5d76c",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -651,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72500de2",
+   "id": "7ca3851f",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17453a9",
+   "id": "20d29630",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -671,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17abd68",
+   "id": "8b6512ff",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1facfcc8",
+   "id": "62a0f47d",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -692,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28595c19",
+   "id": "2c906682",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04d0f8a",
+   "id": "0059f164",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -720,7 +716,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.7744973,
+  "date": 1764540705.0887446,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
