--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b503329",
+   "id": "12b06d76",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca14ead",
+   "id": "a260e149",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4465e1cf",
+   "id": "9006791c",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "73d0994b",
+   "id": "df4da6bd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -57,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffeda80b",
+   "id": "9e79fd3c",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50bd6a7e",
+   "id": "01833dd8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -80,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a268b5b1",
+   "id": "136b7ac4",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646ae114",
+   "id": "25b151c9",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -116,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf784b9c",
+   "id": "4b699249",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa98d59",
+   "id": "8acc94a9",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -150,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f04aba38",
+   "id": "66ed3181",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "542f6609",
+   "id": "e5d5ea72",
    "metadata": {},
    "source": [
     "Here we go"
@@ -179,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93637a2",
+   "id": "abe235e7",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8274d151",
+   "id": "c86359d1",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -198,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32778b5d",
+   "id": "e63ec32f",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -250,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e4dfd3",
+   "id": "27202102",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1a156b",
+   "id": "c8611f7c",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -272,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9531d2",
+   "id": "8d484cca",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -297,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc128ee",
+   "id": "3da76d52",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa6ebb5",
+   "id": "c6259de0",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -342,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468556cc",
+   "id": "3fefb7b3",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44b3c297",
+   "id": "6978abe5",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -373,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ce6ad4",
+   "id": "1f5c897e",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec1d93fc",
+   "id": "473d239a",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -395,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d35fba",
+   "id": "38640111",
    "metadata": {
     "hide-output": false
    },
@@ -407,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b925a17",
+   "id": "86b879f6",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -416,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5dcd3f7",
+   "id": "366cb105",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66606adf",
+   "id": "cf02bd57",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -437,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e75fcc0b",
+   "id": "7197af5d",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1c0476",
+   "id": "c757a768",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -458,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a364cc68",
+   "id": "4130452f",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef390872",
+   "id": "69a53ab6",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -483,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "772aaa69",
+   "id": "b7535248",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a479cd",
+   "id": "e28553b9",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -503,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720e3efc",
+   "id": "db5e3968",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -563,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94937e14",
+   "id": "a1be6e2a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -574,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538b7201",
+   "id": "07d7be30",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec7c0ed1",
+   "id": "d5631561",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -602,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "680b572e",
+   "id": "698b4d7a",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156bd07a",
+   "id": "c63ec127",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -623,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1552894d",
+   "id": "673572bd",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66b9f7d",
+   "id": "20c66972",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -653,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aa32463",
+   "id": "fe0873a3",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "642002bd",
+   "id": "8d7102e2",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -675,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0efbb4e3",
+   "id": "3eea4729",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2669536a",
+   "id": "7fed3f44",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c6c145",
+   "id": "aed68da9",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -719,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4120cc7",
+   "id": "c957d5f0",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "560251f0",
+   "id": "5ac0b2b4",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3ebe49",
+   "id": "394f7082",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -757,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e8ef32",
+   "id": "605d7e74",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -803,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be90d8f0",
+   "id": "5ecca0b8",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -814,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3687caf0",
+   "id": "dff5d7b7",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71140cc8",
+   "id": "0d700028",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -842,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9ef7de4",
+   "id": "fbf74c65",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b54bd0",
+   "id": "9cea546e",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -874,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e016f44c",
+   "id": "a385fff5",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8571f90c",
+   "id": "e04c44f0",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -893,7 +889,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.8027542,
+  "date": 1764540705.1161747,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
