--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1ce64f0",
+   "id": "3ff8367c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52efc3c6",
+   "id": "6273b10e",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1402c31",
+   "id": "af1ffc63",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -38,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f5c0c5",
+   "id": "a0e8ddd0",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfdf7cd",
+   "id": "bf850d47",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -95,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4afd58d1",
+   "id": "3eeb3519",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6403c66c",
+   "id": "824341c7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -119,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69c7317",
+   "id": "e71b653d",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25f56f8f",
+   "id": "3db52636",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -139,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5f5545",
+   "id": "4c6dbb5a",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6d10004",
+   "id": "198ac518",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -159,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edad7aa9",
+   "id": "d22d74f4",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c2e3293",
+   "id": "0df917a2",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -209,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6e3607",
+   "id": "7e614df5",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a915206c",
+   "id": "53650667",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -260,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dcbb39b",
+   "id": "df35f029",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be3afc4e",
+   "id": "cea988bd",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -301,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a07db6a",
+   "id": "9e96c696",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcda2b1d",
+   "id": "17841e95",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -325,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b473279",
+   "id": "a0182b50",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ed4042",
+   "id": "9224fc02",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -349,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c7a359",
+   "id": "3172c838",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a1c917e",
+   "id": "ed68e1e8",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -423,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d290e91",
+   "id": "6740efc9",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa8db790",
+   "id": "a8e6b6f4",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -461,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a78310e6",
+   "id": "6a0a4788",
    "metadata": {
     "hide-output": false
    },
@@ -486,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75a9f121",
+   "id": "0e7405c0",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -495,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99a1e814",
+   "id": "33d471be",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b57a266",
+   "id": "0a6857b4",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -532,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e66814ea",
+   "id": "31d8940c",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a9fb5f",
+   "id": "546881b1",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -562,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6386736",
+   "id": "1fc1edf8",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57c7ea4",
+   "id": "300f488c",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -590,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f243c9d5",
+   "id": "bb157c1d",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3a0f0d",
+   "id": "54a61a6e",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -637,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf308e2",
+   "id": "61013ef6",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8679d36",
+   "id": "882a2291",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -660,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719fe57a",
+   "id": "ea97e11f",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66c019e5",
+   "id": "c800686f",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ced1ba8",
+   "id": "466546f7",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14490347",
+   "id": "520100b1",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7346afe1",
+   "id": "58cb7eb6",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -740,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff343aff",
+   "id": "39d333f2",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5bd38b",
+   "id": "33a3625f",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d93ecf",
+   "id": "35f2379e",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52395845",
+   "id": "521d41e2",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -795,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890d14e1",
+   "id": "fe8c1923",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3990b41",
+   "id": "609e2aef",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fb33c14",
+   "id": "865b3e4b",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bbf0d99",
+   "id": "8a210179",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -850,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7889f642",
+   "id": "a85d798b",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "759d5e13",
+   "id": "c8b1256c",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -877,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54837ff8",
+   "id": "4e222afc",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3a28654",
+   "id": "66f117ae",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8f191a",
+   "id": "0f60fa67",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f953aadb",
+   "id": "b0c645cc",
    "metadata": {
     "hide-output": false
    },
@@ -931,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12e37405",
+   "id": "7be24530",
    "metadata": {
     "hide-output": false
    },
@@ -947,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb056ef",
+   "id": "e20f49c1",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e86d340",
+   "id": "f3c16c04",
    "metadata": {
     "hide-output": false
    },
@@ -989,7 +985,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.833097,
+  "date": 1764540705.1412961,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
