--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a2015b0",
+   "id": "8fbae718",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b3578a",
+   "id": "b5b685e7",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d731d4a",
+   "id": "e4b30823",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In this lecture we examine wealth dynamics in large cross-section of agents who\n",
     "are subject to both\n",
@@ -55,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83cb5ccd",
+   "id": "875100de",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aec4a6a",
+   "id": "42dc38b9",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -75,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc558635",
+   "id": "1ecb5db9",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1a3bc2",
+   "id": "138f2b06",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -102,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07b5d4f",
+   "id": "a56066e5",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a466b66",
+   "id": "33a31ec4",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -174,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a21abd6",
+   "id": "71c9023c",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da433ca",
+   "id": "93e0bffb",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -193,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc1f16c6",
+   "id": "574766a2",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5268a650",
+   "id": "88293bf5",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -248,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa389708",
+   "id": "f8b8dd44",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32142353",
+   "id": "503080a4",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -276,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2b0fb1",
+   "id": "67e639b1",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16560186",
+   "id": "7aaddabc",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -309,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce81711e",
+   "id": "cd31107e",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd582aa",
+   "id": "b4c8d756",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -346,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae774e80",
+   "id": "e838ec47",
    "metadata": {
     "hide-output": false
    },
@@ -363,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4dabdb8",
+   "id": "75e61ef0",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcce79e9",
+   "id": "4c9a2f12",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -392,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "948fdca9",
+   "id": "4c34cbd3",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7740527b",
+   "id": "c14923c4",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -446,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b09f88f",
+   "id": "b369c3f1",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc9a3b0",
+   "id": "71280011",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -475,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc770051",
+   "id": "1168a6ec",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf985d68",
+   "id": "eee88480",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -501,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bb2126",
+   "id": "75b80b61",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c740c19a",
+   "id": "281db626",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -551,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "084ce934",
+   "id": "61984b80",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b6583cc",
+   "id": "1092e318",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f9f31f6",
+   "id": "b371d7e7",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea15340",
+   "id": "8d8f0292",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -610,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0cfbbbe",
+   "id": "069ee689",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b59dbe1",
+   "id": "0db24fd8",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e72cfe12",
+   "id": "b562e154",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6acb4346",
+   "id": "e6d2ec15",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2444eb5a",
+   "id": "77227e6f",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4d6c63",
+   "id": "dd29bf20",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -741,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a48b44a",
+   "id": "b18e2c3e",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802c5014",
+   "id": "bf2e410a",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -779,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3361eeb5",
+   "id": "75b1c3d5",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -800,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e32db02",
+   "id": "0c9ee1e0",
    "metadata": {
     "hide-output": false
    },
@@ -819,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83b1702",
+   "id": "9ba752d8",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -828,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "266b31f1",
+   "id": "acac952a",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731f2c64",
+   "id": "83bfa6a9",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bbbe57a",
+   "id": "86adce05",
    "metadata": {
     "hide-output": false
    },
@@ -872,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d7e2d8e",
+   "id": "64fe5160",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5323204",
+   "id": "42c94717",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9998f6b9",
+   "id": "1a2611d9",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -922,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebcc04f8",
+   "id": "5f4244b0",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e112cfab",
+   "id": "372df42c",
    "metadata": {
     "hide-output": false
    },
@@ -952,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76edd771",
+   "id": "16c536ae",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7356488",
+   "id": "62c4bd9d",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0657d1ea",
+   "id": "5fc80936",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -984,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a91c11",
+   "id": "00c4d95a",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -996,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53477f2c",
+   "id": "5189e6af",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -1007,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b636ec72",
+   "id": "23d6904a",
    "metadata": {
     "hide-output": false
    },
@@ -1028,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4431f0",
+   "id": "1839fe2d",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b25e83c4",
+   "id": "69ac94ff",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5484a185",
+   "id": "58b64a1d",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0c01d3",
+   "id": "0afaf872",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1091,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc5cb46",
+   "id": "5699b5f6",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a89cce",
+   "id": "499ab2b8",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1111,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5c2987",
+   "id": "7ab31f33",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa55068",
+   "id": "ec02a287",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1133,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b71ba05",
+   "id": "36b87ca0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1144,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98e5bd0",
+   "id": "16c8fe01",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2960abe",
+   "id": "c40a1a78",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1180,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433da141",
+   "id": "109f88f4",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1198212c",
+   "id": "29800790",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1203,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85d531c1",
+   "id": "7bf0dfe8",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1216,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8dfbe3a",
+   "id": "0156acc8",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b10b0ef",
+   "id": "a3bc016b",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1237,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e2d0d7",
+   "id": "902d9039",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1248,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1339df73",
+   "id": "4d222e13",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed40c232",
+   "id": "2cdbe5e1",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dacdfaf",
+   "id": "a494b5da",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1312,7 +1308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d8b926",
+   "id": "3b844bc4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1325,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c04336f",
+   "id": "4df053d6",
    "metadata": {
     "hide-output": false
    },
@@ -1364,7 +1360,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489378.028883,
+  "date": 1764540705.3297572,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
