--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "caa78ef5",
+   "id": "9e149289",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66b3939c",
+   "id": "a88a8ae6",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab6863f",
+   "id": "3369178a",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11a33cb7",
+   "id": "1cecdc29",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -56,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a25b6dee",
+   "id": "af86e3de",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479521ae",
+   "id": "cd5130ab",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -76,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a944b4c",
+   "id": "d228eafb",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8bd273",
+   "id": "48ab1a9b",
    "metadata": {},
    "source": [
     "## The Model"
@@ -99,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad12ead2",
+   "id": "036b3cd8",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a2c67db",
+   "id": "cc54ce5e",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -186,7 +182,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-b037adbe-5f50-4e15-9255-d4a12c2a0198'></a>\n",
+    "<a id='equation-c7b32221-efc2-4da7-9411-0732c855079b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -199,7 +195,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-7e14ae84-0c48-4d89-9667-f1a260acc86e'></a>\n",
+    "<a id='equation-4e6db971-f2dd-4d5d-97e9-f0ef20beb9ea'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -219,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3f71db",
+   "id": "a44e418e",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -253,7 +249,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-d5de0e81-f47d-49dd-beb8-c3c07fcc7f96'></a>\n",
+    "<a id='equation-0fc81ddf-e8be-4f8c-8846-874c90661ac7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -263,7 +259,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-bf7848be-ad2e-4986-8301-92b45cd8bb51'></a>\n",
+    "<a id='equation-7ac11063-ccde-4103-85ea-b34947646ec7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -277,7 +273,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-e3f71a23-d5a3-43b0-9fe1-0ae9a5aad283'></a>\n",
+    "<a id='equation-42a8337a-3f9b-4f46-a134-d47d5ff07b7e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -287,7 +283,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-eb41702f-5fef-4253-8307-9bf66c7e8788'></a>\n",
+    "<a id='equation-12c5cb0c-35c4-42c9-ae98-75eedb721f4d'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -301,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd23d64",
+   "id": "270e3767",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -312,7 +308,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-fbbbf2d6-0c6e-43d0-9e04-6b121fb7a97c'></a>\n",
+    "<a id='equation-64ca9d46-8252-41d7-bf39-7cac432aca41'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -324,7 +320,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-5aadd08f-8dce-4ecb-99cb-026b9de743a1'></a>\n",
+    "<a id='equation-3787b86d-7c27-447d-9b47-d2e70b8f354d'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -364,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e92836",
+   "id": "e87a5be6",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -386,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3504570c",
+   "id": "bf4db479",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -397,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de6cd59",
+   "id": "4dd604e3",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd00c73f",
+   "id": "4b1f59c2",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -417,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fcd3faf",
+   "id": "db35a69f",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d2b6386",
+   "id": "b0d20753",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7381750",
+   "id": "7d5c4f77",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d9c63a9",
+   "id": "8c2c557e",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2102b3",
+   "id": "fe1425a3",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -518,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48be733",
+   "id": "4ee29fd2",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97d1bbb",
+   "id": "4fa13692",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a388c36",
+   "id": "5728197e",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -566,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d63b142",
+   "id": "b61b5838",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6f5946",
+   "id": "85982088",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27cd7ed5",
+   "id": "19eb691c",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -605,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9442a523",
+   "id": "8cec4ecd",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a268fac0",
+   "id": "4d6dcda7",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -644,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f228ef0",
+   "id": "e51aae74",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df6e4c0f",
+   "id": "76dbe6ff",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -679,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c7e281",
+   "id": "339c757e",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09a67f4b",
+   "id": "0f4742e8",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075b3deb",
+   "id": "402d47aa",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -721,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2c9c784",
+   "id": "076089e0",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab7a2203",
+   "id": "296e9cf1",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -750,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0527945",
+   "id": "24b20aa1",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f8e7a4",
+   "id": "62bd3938",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -780,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc4a220",
+   "id": "f76483b4",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21cbd710",
+   "id": "0d51ad5f",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692ffcf3",
+   "id": "c9c03ba3",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -861,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bad949f",
+   "id": "39ef69d8",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd9ab82",
+   "id": "5da59e30",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -904,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ad26ea",
+   "id": "ae0fc7be",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7081df23",
+   "id": "d71345a6",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -949,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014b10e5",
+   "id": "3ad824e6",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -960,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "884e0eb4",
+   "id": "d2077096",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01df838b",
+   "id": "16c7032b",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -982,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d26ee4c",
+   "id": "43788c2c",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f30512",
+   "id": "8d2ccbaa",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1004,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c12efc58",
+   "id": "e721333c",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e668d52",
+   "id": "9b9bf20b",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1026,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9ebcfd8",
+   "id": "0d94848d",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4168e7ad",
+   "id": "e992fc27",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1060,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3457ebbd",
+   "id": "75e78844",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8114dc96",
+   "id": "b749d32e",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d29836ed",
+   "id": "b8f9fe1b",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1093,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a74e9333",
+   "id": "48ba2618",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa6a8c0",
+   "id": "032f98e8",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1115,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1bc6217",
+   "id": "068809dc",
    "metadata": {
     "hide-output": false
    },
@@ -1126,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "527126e7",
+   "id": "6b9d6d12",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1135,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a491cf",
+   "id": "80d2b452",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b6cefd9",
+   "id": "8975db10",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1160,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe5fa7a",
+   "id": "dfa6e5ea",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269f6c58",
+   "id": "97b93832",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d0d020e",
+   "id": "bf6c048d",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1240,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98de0241",
+   "id": "8e1aba67",
    "metadata": {
     "hide-output": false
    },
@@ -1257,7 +1253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0992682e",
+   "id": "992295e5",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1266,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde1161f",
+   "id": "64344dd6",
    "metadata": {
     "hide-output": false
    },
@@ -1287,7 +1283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16fe9d37",
+   "id": "7982c75d",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1295,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11391223",
+   "id": "7cdf28dd",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1310,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534eb488",
+   "id": "a0b8e589",
    "metadata": {
     "hide-output": false
    },
@@ -1327,7 +1323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34228b69",
+   "id": "3d7c627e",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1335,7 +1331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ad6711",
+   "id": "4da3ce8e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1344,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63d05d9f",
+   "id": "68afb770",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddc8892d",
+   "id": "887d2aa3",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1370,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ef23ff",
+   "id": "d24e77ab",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1385,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5651dd0",
+   "id": "e438d9de",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6274c4",
+   "id": "6013c3fb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1405,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68159909",
+   "id": "5ee8f80b",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1425,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.3562195,
+  "date": 1764540704.6882038,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
