--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9eef2b4e",
+   "id": "b03877ad",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b94227d",
+   "id": "cd39db7a",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,21 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee9f2e7",
+   "id": "17281c93",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "43cea278",
+   "id": "88bd2f0d",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -65,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b415009c",
+   "id": "13abc6bd",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c465f463",
+   "id": "68e33562",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4cc68b",
+   "id": "8bbca1aa",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cefa745",
+   "id": "fa06ca21",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -124,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246e4d0d",
+   "id": "d07af290",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d75700",
+   "id": "ab4e9dc6",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733157a3",
+   "id": "5b1ff9bd",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -174,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dfe2a03",
+   "id": "0d205644",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37570175",
+   "id": "739e67c3",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -201,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b60eb50c",
+   "id": "5af0bf9f",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d03f0816",
+   "id": "53f7fb12",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -236,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2364511",
+   "id": "d4bec5dc",
    "metadata": {
     "hide-output": false
    },
@@ -254,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b36a39",
+   "id": "63d1b9ef",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -272,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04fbdbaa",
+   "id": "2bbe05cb",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d9bf0b8",
+   "id": "e9ab24c8",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -312,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "631759f2",
+   "id": "6a4d4583",
    "metadata": {
     "hide-output": false
    },
@@ -343,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "448e0c2d",
+   "id": "45295425",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -352,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7700bbe4",
+   "id": "c279c389",
    "metadata": {
     "hide-output": false
    },
@@ -370,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540b382e",
+   "id": "a0f232a1",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -379,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac014f59",
+   "id": "56ef8b67",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e6905eb",
+   "id": "2b7e0ddc",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -407,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2915ff46",
+   "id": "4dba8cc5",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -420,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f907bc",
+   "id": "ad81bbdb",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -461,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2084a4b",
+   "id": "dc6287e3",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4abd7a",
+   "id": "a921e9e4",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -488,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d6c7501",
+   "id": "62a82fe1",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c44e24",
+   "id": "e39c7ef8",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -517,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327508e5",
+   "id": "cd3f5040",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a84569",
+   "id": "5b454b04",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -560,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43477416",
+   "id": "12cfc8af",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -571,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b70fca",
+   "id": "0cf21bc2",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae3defa",
+   "id": "c4e79966",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -608,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0575225e",
+   "id": "c0505855",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c855f690",
+   "id": "e76abc22",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -638,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43dc4983",
+   "id": "09fbe0e8",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b47a1ec",
+   "id": "731c7f48",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -671,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436dce3a",
+   "id": "fcba9b89",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -685,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f03347a",
+   "id": "a5a6d675",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3379b85",
+   "id": "cad46e71",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -734,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "140ee520",
+   "id": "0a2765fd",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d6a30b",
+   "id": "8fd7f890",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -781,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84596315",
+   "id": "3e11217d",
    "metadata": {
     "hide-output": false
    },
@@ -795,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "388071ac",
+   "id": "020edf27",
    "metadata": {
     "hide-output": false
    },
@@ -820,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1db5fb0",
+   "id": "4b8eb165",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
@@ -831,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f33ef2",
+   "id": "448413e1",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d100fe5b",
+   "id": "4ebdb18c",
    "metadata": {},
    "source": [
     "Here’s a visualization of the quality of our fit."
@@ -854,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b522277f",
+   "id": "26916267",
    "metadata": {
     "hide-output": false
    },
@@ -871,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed61d09d",
+   "id": "aef4e70f",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -884,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985f4fc2",
+   "id": "872b32c1",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -895,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6abe1e37",
+   "id": "ac3abcb2",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e9fc1bd",
+   "id": "7b7adfd4",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -938,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51037897",
+   "id": "b53ca868",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a329861",
+   "id": "20636aa3",
    "metadata": {
     "hide-output": false
    },
@@ -982,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7918025b",
+   "id": "3e49ea71",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -997,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa8ea0e",
+   "id": "fddfda86",
    "metadata": {
     "hide-output": false
    },
@@ -1030,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64457add",
+   "id": "edef7cbf",
    "metadata": {
     "hide-output": false
    },
@@ -1056,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d6855a",
+   "id": "6506d5c1",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1065,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ef2b53",
+   "id": "b3a237df",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a9edc8",
+   "id": "5e307854",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1093,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2be6a0",
+   "id": "9d042ab4",
    "metadata": {
     "hide-output": false
    },
@@ -1129,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b69841",
+   "id": "67c8d61b",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1149,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e669215",
+   "id": "56a1bdfe",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1157,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8716bd8",
+   "id": "d1a2e3c4",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1188,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11d3e7dc",
+   "id": "1864da7f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 23.1](https://jax.quantecon.org/#jax_nn_ex1)\n",
@@ -1203,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fc44c20",
+   "id": "fdebee04",
    "metadata": {
     "hide-output": false
    },
@@ -1247,7 +1243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd9c9e9c",
+   "id": "79c572c4",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1258,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13c9420",
+   "id": "ecc2dfbf",
    "metadata": {
     "hide-output": false
    },
@@ -1314,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "387f731e",
+   "id": "13f44cf2",
    "metadata": {},
    "source": [
     "**Strategy 3: ELU Activation**\n",
@@ -1325,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dcb2a60",
+   "id": "9647d23e",
    "metadata": {
     "hide-output": false
    },
@@ -1393,7 +1389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916524ff",
+   "id": "4b42774b",
    "metadata": {},
    "source": [
     "**Strategy 4: SELU Activation**\n",
@@ -1404,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9969dc1",
+   "id": "b44ea1ef",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb283fb9",
+   "id": "8e5890a8",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1483,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69c163bd",
+   "id": "1c6ad147",
    "metadata": {
     "hide-output": false
    },
@@ -1531,7 +1527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67310f27",
+   "id": "630e45c2",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1545,7 +1541,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.57932,
+  "date": 1764540704.9017298,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
