--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e8e5474c",
+   "id": "46bbc160",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2bbc3f5",
+   "id": "69fb7fef",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842f4832",
+   "id": "44e9fc2f",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In this lecture we study a basic infinite-horizon job search problem with Markov wage\n",
     "draws\n",
@@ -48,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6288533",
+   "id": "07089c60",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4322ec8a",
+   "id": "8fe22cab",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -68,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bdf4e3a",
+   "id": "f4852522",
    "metadata": {
     "hide-output": false
    },
@@ -85,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312a1bf2",
+   "id": "eff9f547",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -100,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e739f65",
+   "id": "b75a7b66",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -122,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55b7e1ce",
+   "id": "5620d15c",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c79003",
+   "id": "d24d5a3a",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -159,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caaa915c",
+   "id": "215c5c3a",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f39fa86",
+   "id": "b4fe6e3f",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -179,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dec4f55",
+   "id": "5005f48c",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "698dcfe7",
+   "id": "1130dd2a",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -209,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b335058",
+   "id": "4e7551e5",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09a13e23",
+   "id": "092423c2",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06396664",
+   "id": "a63ec755",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5142c625",
+   "id": "d26cdb16",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41056107",
+   "id": "408f4b93",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -265,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bdf698e",
+   "id": "eac950ca",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0860b8e",
+   "id": "e9678629",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -312,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f265071",
+   "id": "0e4e954a",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43e4a3f",
+   "id": "ff00f974",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -339,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be36739c",
+   "id": "8d9d182e",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b43119",
+   "id": "b595e27c",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -376,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "688472c2",
+   "id": "d931e95a",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0859ebf9",
+   "id": "719fe9f4",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -399,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e88a418",
+   "id": "82a307b1",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74462d9b",
+   "id": "8e3d0c37",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -423,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0dd29b",
+   "id": "ed132cc1",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b9e6efb",
+   "id": "d8dd8eca",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd4a2ec",
+   "id": "9b24732d",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1533835",
+   "id": "729362e0",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -468,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f28df3",
+   "id": "fb22dbdb",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d596e0b8",
+   "id": "d36bd032",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -492,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c97968",
+   "id": "ba7d693a",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -528,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f01f6ef",
+   "id": "e0e4fea5",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed5fe33",
+   "id": "26630d57",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -561,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7bacfe4",
+   "id": "3a8a8634",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -570,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd8c437",
+   "id": "abbfd16b",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c025998d",
+   "id": "ecee9227",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -658,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ff69af",
+   "id": "ab49760d",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52a3aa75",
+   "id": "cc672e97",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c806c9f8",
+   "id": "767b3d71",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -703,7 +699,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.605637,
+  "date": 1764540704.9230297,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
