--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f74d969b",
+   "id": "c77e68a8",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037edbb3",
+   "id": "b5be9d5c",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8884b6",
+   "id": "34880481",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -38,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9acb900c",
+   "id": "a1c96d83",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deaf26ff",
+   "id": "de462158",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -58,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "766016de",
+   "id": "8d2a2f7c",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b6b4a3a",
+   "id": "d5587061",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -84,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcff79c8",
+   "id": "b333ffe3",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c675d4a",
+   "id": "a548677f",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -104,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51da66a0",
+   "id": "df04b73e",
    "metadata": {
     "hide-output": false
    },
@@ -115,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f2affe",
+   "id": "de4825dd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -162,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c003d71f",
+   "id": "9313a19d",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b3f16aa",
+   "id": "3b768b31",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -190,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "850072a7",
+   "id": "0856a35d",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9da10d8b",
+   "id": "55f51a53",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -235,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb31bfa",
+   "id": "c0d98ee1",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d7c6dee",
+   "id": "3d5b6966",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -287,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c20e7cd2",
+   "id": "f71b0558",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a30f8fbe",
+   "id": "bae1ba18",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -315,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9d38a9",
+   "id": "67cad6bc",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb5cbae",
+   "id": "68f85f22",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -345,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391e1e2b",
+   "id": "5f8f2356",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a761e5cd",
+   "id": "dda34472",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a5a71bb",
+   "id": "af7b96c0",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -386,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7514ae79",
+   "id": "ea7e41c4",
    "metadata": {
     "hide-output": false
    },
@@ -400,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f8ac02",
+   "id": "7a251231",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -409,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a497401",
+   "id": "5b33081e",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "920d390e",
+   "id": "5e8a9c57",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -436,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16df0eae",
+   "id": "c6c686dd",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -450,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "193ef08a",
+   "id": "4c418884",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76709a1e",
+   "id": "aab943af",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -486,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad7a6835",
+   "id": "38d2fba5",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1262ac03",
+   "id": "49e6090a",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -539,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93240cc9",
+   "id": "ffec4c2c",
    "metadata": {
     "hide-output": false
    },
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7272c60e",
+   "id": "cb26c422",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -562,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a20a70b4",
+   "id": "9f2488fe",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006f2f29",
+   "id": "e9e664d9",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -587,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a23725d6",
+   "id": "977ae09e",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64286afc",
+   "id": "66dafe54",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -623,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d565f7c9",
+   "id": "17c1a02d",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a959a97c",
+   "id": "762754c4",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -663,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79ed7797",
+   "id": "e3e57d90",
    "metadata": {
     "hide-output": false
    },
@@ -679,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "208c34e3",
+   "id": "6e435e4a",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -690,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08ea0ae",
+   "id": "ebfaf19f",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1a2234",
+   "id": "39e7924a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -715,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97ec7652",
+   "id": "8afb8355",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "165baee2",
+   "id": "3c8d3655",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -739,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d6ac1a4",
+   "id": "5f41f7bc",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "506992a0",
+   "id": "77d76a13",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -762,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba941e54",
+   "id": "38c60819",
    "metadata": {
     "hide-output": false
    },
@@ -773,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ae26f3",
+   "id": "c30c7a4d",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -784,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b975f88",
+   "id": "c6eaa8f9",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -815,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11888ca6",
+   "id": "a51e97a0",
    "metadata": {
     "hide-output": false
    },
@@ -840,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b2d89c5",
+   "id": "0888e236",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -849,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7813fed",
+   "id": "014465bb",
    "metadata": {
     "hide-output": false
    },
@@ -862,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7655201",
+   "id": "1c346554",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -871,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a266d21",
+   "id": "dea25469",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd03362",
+   "id": "a55ba5cf",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -907,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d452639f",
+   "id": "12d72860",
    "metadata": {
     "hide-output": false
    },
@@ -923,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da822000",
+   "id": "e0c640f9",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -932,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3662dd",
+   "id": "c2e407cd",
    "metadata": {
     "hide-output": false
    },
@@ -947,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b59a92e5",
+   "id": "ebc26be6",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -956,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "383e16d0",
+   "id": "e11e049a",
    "metadata": {
     "hide-output": false
    },
@@ -970,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccca480c",
+   "id": "cab32d1f",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -979,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c47ca34c",
+   "id": "cf564e3b",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56a3c80",
+   "id": "83b7a22f",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -1000,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863ad13d",
+   "id": "869c25af",
    "metadata": {
     "hide-output": false
    },
@@ -1011,7 +1007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9635130f",
+   "id": "0df8da12",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1020,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7174e930",
+   "id": "dbd65736",
    "metadata": {
     "hide-output": false
    },
@@ -1031,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "276d365c",
+   "id": "ba29def3",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1043,7 +1039,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.8637226,
+  "date": 1764540705.1749997,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
