--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49c3e202",
+   "id": "2fe0c645",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e01ad91",
+   "id": "f8853d9e",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,16 +21,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "850104c9",
+   "id": "ffecb03e",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture was built using a machine with JAX installed and access to a GPU.\n",
-    "\n",
-    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
-    "\n",
-    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
+    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
     "\n",
     "This lecture provides a JAX implementation of “Overborrowing and Systemic Externalities” [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)] by [Javier Bianchi](http://www.javierbianchi.com/).\n",
     "\n",
@@ -40,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a4d4c2",
+   "id": "8c41ed0a",
    "metadata": {
     "hide-output": false
    },
@@ -51,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d746cd",
+   "id": "05b5c955",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -60,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126f47c6",
+   "id": "4c39bd4d",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a3e02b2",
+   "id": "ba85c0ed",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -105,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "278c3cd8",
+   "id": "fe0e153b",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1af43b2a",
+   "id": "2bccd5c7",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -131,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6635ce",
+   "id": "2612aaf4",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5ac7a9",
+   "id": "62192532",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -154,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4fb5f25",
+   "id": "6fe0a748",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710e2722",
+   "id": "b9dd4d57",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -196,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dff7a9b",
+   "id": "1c712521",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e36a6f78",
+   "id": "8df9d06a",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -243,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50abfac",
+   "id": "69763f82",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "420a1ed1",
+   "id": "0aa15d39",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -286,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f2871d",
+   "id": "e61e11b9",
    "metadata": {
     "hide-output": false
    },
@@ -301,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac20a2b2",
+   "id": "89bb45b1",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c862ab45",
+   "id": "06e53c6a",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03d9c974",
+   "id": "807335d9",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dda3df9",
+   "id": "30e0b703",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -377,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b24a9a9c",
+   "id": "dee1646d",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -455,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19045fee",
+   "id": "f61e7c94",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -519,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5e557d",
+   "id": "fb968c94",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -550,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92906a9c",
+   "id": "b4bc2d9f",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98c0087",
+   "id": "fed7bf24",
    "metadata": {
     "hide-output": false
    },
@@ -604,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17c87b6",
+   "id": "ee6fc0a7",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -617,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acfaa66",
+   "id": "97f38781",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded56b6f",
+   "id": "445b91dc",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -649,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4a487c",
+   "id": "ab9b6765",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "150a1dcb",
+   "id": "d86ac7dc",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -682,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3494e0a2",
+   "id": "0acc9553",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a4dc57",
+   "id": "336303d1",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -731,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b688b2d6",
+   "id": "0b8256e9",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e1447a1",
+   "id": "a436f326",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -761,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c90d53",
+   "id": "628ea8fb",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3902f68",
+   "id": "4416317a",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -799,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbdbfac4",
+   "id": "cf19276d",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd76a0c4",
+   "id": "9300d38f",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b270aec3",
+   "id": "eb720096",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c866999",
+   "id": "78014115",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "064d068c",
+   "id": "ebf79827",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -905,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7d89b61",
+   "id": "9fc75561",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51a84ce",
+   "id": "f33e89a4",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -942,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d2e2855",
+   "id": "92c90670",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93f8ae21",
+   "id": "1113e0e5",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1017,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58bc1c48",
+   "id": "dfe8ab90",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e773a51b",
+   "id": "4c17616f",
    "metadata": {
     "hide-output": false
    },
@@ -1072,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a00a454",
+   "id": "fd9574df",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1081,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ced25597",
+   "id": "d71479a6",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30168d05",
+   "id": "f977191b",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1110,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "030929db",
+   "id": "2fdc2abc",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e423a1e7",
+   "id": "35e28aaa",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4084850",
+   "id": "8d96e4f7",
    "metadata": {
     "hide-output": false
    },
@@ -1174,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e873d4b8",
+   "id": "ff391316",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1183,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d1cd76",
+   "id": "9395e308",
    "metadata": {
     "hide-output": false
    },
@@ -1207,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960a4d86",
+   "id": "f0f6b05b",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1217,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f9ff56",
+   "id": "582e093e",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1228,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c85eae96",
+   "id": "2a511de0",
    "metadata": {
     "hide-output": false
    },
@@ -1242,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57442dd9",
+   "id": "87ef5ec1",
    "metadata": {
     "hide-output": false
    },
@@ -1259,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119413f2",
+   "id": "5a010b1a",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5885a4a4",
+   "id": "663c0d84",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1286,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b0a5d2",
+   "id": "6db155a1",
    "metadata": {
     "hide-output": false
    },
@@ -1309,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c93e193",
+   "id": "fadf35d2",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1320,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72793b1d",
+   "id": "324c3b90",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1328,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e49b7d9",
+   "id": "6b0e9ec8",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1346,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae73089c",
+   "id": "0452b8a8",
    "metadata": {
     "hide-output": false
    },
@@ -1372,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a7d1ce",
+   "id": "edf4f81a",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1391,7 +1387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d5960f1",
+   "id": "ea481f58",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1400,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d84d718",
+   "id": "02afa00d",
    "metadata": {
     "hide-output": false
    },
@@ -1412,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "547a4cb5",
+   "id": "bff522ac",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3288ab84",
+   "id": "499fb45e",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1434,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155d9e5f",
+   "id": "a64585e7",
    "metadata": {
     "hide-output": false
    },
@@ -1446,7 +1442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd988a5",
+   "id": "76cf49ae",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1455,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78df4e94",
+   "id": "c5b6b1e7",
    "metadata": {
     "hide-output": false
    },
@@ -1469,7 +1465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c6dea6",
+   "id": "ee7b43cb",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1478,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fc4abd2",
+   "id": "e55223e4",
    "metadata": {
     "hide-output": false
    },
@@ -1496,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293042b7",
+   "id": "b815335f",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1509,7 +1505,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.9478517,
+  "date": 1764540705.2559717,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
