--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b5518a6c",
+   "id": "b539135b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f8c520",
+   "id": "f302c1d1",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -26,13 +26,13 @@
     "|arellano|2025-11-28 05:58|cache|22.59|✅|\n",
     "|autodiff|2025-11-28 05:58|cache|13.12|✅|\n",
     "|hopenhayn|2025-11-28 05:59|cache|24.59|✅|\n",
-    "|ifp_dl|2025-11-30 07:54|cache|50.89|✅|\n",
+    "|ifp_dl|2025-11-30 22:09|cache|50.79|✅|\n",
     "|ifp_egm|2025-11-28 06:01|cache|139.78|✅|\n",
     "|intro|2025-11-28 06:01|cache|0.89|✅|\n",
     "|inventory_dynamics|2025-11-28 06:01|cache|8.47|✅|\n",
     "|inventory_ssd|2025-11-28 06:01|cache|9.63|✅|\n",
     "|jax_intro|2025-11-28 06:01|cache|19.15|✅|\n",
-    "|jax_nn|2025-11-30 07:55|cache|44.55|✅|\n",
+    "|jax_nn|2025-11-30 22:10|cache|44.53|✅|\n",
     "|job_search|2025-11-28 06:02|cache|10.05|✅|\n",
     "|keras|2025-11-28 06:03|cache|26.22|✅|\n",
     "|kesten_processes|2025-11-28 06:03|cache|10.89|✅|\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed386954",
+   "id": "c3c69166",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a2f7a2",
+   "id": "410d2884",
    "metadata": {},
    "source": [
     "and the following package versions"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d2c0b3b",
+   "id": "0b42798f",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c35caabe",
+   "id": "b59b2c27",
    "metadata": {},
    "source": [
     "You can check the backend used by JAX using:"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db03d6e5",
+   "id": "ebd56b11",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a91f4d13",
+   "id": "0f9a9ce4",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab6efa0",
+   "id": "6836e6f9",
    "metadata": {
     "hide-output": false
    },
@@ -133,7 +133,7 @@
   }
  ],
  "metadata": {
-  "date": 1764489377.9868393,
+  "date": 1764540705.293056,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
